--- a/src/algorithms/signal_source/gnuradio_blocks/CMakeLists.txt
+++ b/src/algorithms/signal_source/gnuradio_blocks/CMakeLists.txt
@@ -35,6 +35,7 @@ set(SIGNAL_SOURCE_GR_BLOCKS_SOURCES
     unpack_byte_2bit_cpx_samples.cc
     unpack_byte_4bit_samples.cc
     unpack_intspir_1bit_samples.cc
+    unpack_nut4nt_samples.cc
     rtl_tcp_signal_source_c.cc
     unpack_2bit_samples.cc
     unpack_spir_gss6450_samples.cc
@@ -48,6 +49,7 @@ set(SIGNAL_SOURCE_GR_BLOCKS_HEADERS
     unpack_byte_2bit_cpx_samples.h
     unpack_byte_4bit_samples.h
     unpack_intspir_1bit_samples.h
+    unpack_nut4nt_samples.h
     rtl_tcp_signal_source_c.h
     unpack_2bit_samples.h
     unpack_spir_gss6450_samples.h
