--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ option(ENABLE_PLUTOSDR "Enable the use of ADALM-PLUTO Evaluation Boards (Analog 
 option(ENABLE_FMCOMMS2 "Enable the use of FMCOMMS4-EBZ + ZedBoard hardware, requires gr-iio" OFF)
 option(ENABLE_AD9361 "Enable the use of AD9361 directo to FPGA hardware, requires libiio" OFF)
 option(ENABLE_RAW_UDP "Enable the use of high-optimized custom UDP packet sample source, requires libpcap" OFF)
+option(ENABLE_NUT2NT "Enable the use of nut2nt front-end" OFF)
 
 # Performance analysis tools
 option(ENABLE_GPERFTOOLS "Enable linking to Gperftools libraries (tcmalloc and profiler)" OFF)
@@ -1467,6 +1468,23 @@ if(ENABLE_OSMOSDR)
 else()
     message(STATUS "The (optional) driver for OsmoSDR and related front-ends is not enabled.")
     message(STATUS "Enable it with 'cmake -DENABLE_OSMOSDR=ON ../' to add support for OsmoSDR and other front-ends (HackRF, bladeRF, Realtek's RTL2832U-based USB dongles, etc.)")
+endif()
+
+if(ENABLE_NUT2NT)
+    find_package(NUT2NT)
+    if(NUT2NT_FOUND)
+        message(STATUS "The driver for nut2nt front-end will be compiled.")
+        message(STATUS "You can disable it with 'cmake -DENABLE_NUT2NT=OFF ../'")
+    else()
+        if(ENABLE_PACKAGING)
+            message(WARNING "gr-nut2nt has not been found. Source blocks depending on it will NOT be built.")
+        else()
+            message(FATAL_ERROR "gr-nut2nt required to build gnss-sdr with the optional NUT2NT driver")
+        endif()
+    endif()
+else()
+    message(STATUS "The (optional) driver for nut2nt front-end is not enabled.")
+    message(STATUS "Enable it with 'cmake -DENABLE_NUT2NT=ON ../' to add support for nut2nt front-end")
 endif()
 
 if($ENV{FLEXIBAND_DRIVER})
